[project]
name = "llm-tools-weather-forecast"
version = "0.1"
dependencies = [
    "llm",
    "requests"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.entry-points.llm]
llm_tools_weather_forecast = "llm_tools_weather_forecast"

[project.optional-dependencies]
test = ["pytest", "llm-echo>=0.3a1"]
